--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "devDependencies": {
     "@stencil/core": "^2.0.0",
-    "@stencil/router": "^1.0.1"
+    "@stencil/router": "^1.0.1",
+    "@types/jest": "^26.0.18"
   },
   "license": "MIT",
   "dependencies": {
     "@esri/calcite-components": "^1.0.0-beta.46",
-    "arcgis-js-api": "^4.18.0-next.20201204"
+    "@types/arcgis-js-api": "^4.17.0",
+    "esri-loader": "^2.16.0"
   }
 }
