--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,9 @@
     "jsxFactory": "h"
   },
   "include": [
-    "node_modules/arcgis-js-api/index.d.ts",
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+    "node_modules/arcgis-js-api/index.d.ts",
   ],
   "exclude": [
     "node_modules"
