--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@stencil/core": "^2.0.0",
     "@stencil/router": "^1.0.1",
+    "@stencil/sass": "^1.4.1",
     "@types/jest": "^26.0.18"
   },
   "license": "MIT",
