--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,54 +1,60 @@
 {
-  "extends": [
-    "plugin:@stencil/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "prettier/@typescript-eslint"
-  ],
-  "ignorePatterns": ["dist", "docs", "www"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": "./tsconfig-eslint.json",
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint", "eslint-plugin-react", "prettier"],
-  "rules": {
-    "@stencil/decorators-style": "warn",
-    "@stencil/own-methods-must-be-private": "off",
-    "@stencil/own-props-must-be-private": "off",
-    "@stencil/prefer-vdom-listener": "warn",
-    "@stencil/required-jsdoc": "off",
-    "@stencil/strict-boolean-conditions": "off",
-    "@typescript-eslint/ban-types": "warn",
-    "@typescript-eslint/explicit-module-boundary-types": [
-      "error",
-      {
-        "allowArgumentsExplicitlyTypedAsAny": true,
-        "allowedNames": [
-          "connectedCallback",
-          "disconnectedCallback",
-          "componentWillRender",
-          "componentDidRender",
-          "componentWillLoad",
-          "componentDidLoad",
-          "componentWillUpdate",
-          "componentDidUpdate",
-          "render"
-        ]
-      }
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:@stencil/recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
-    "@typescript-eslint/no-explicit-any": "off",
-    "lines-between-class-members": ["error", "always"],
-    "no-multiple-empty-lines": ["error", { "max": 1 }],
-    "react/jsx-sort-props": "error",
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error",
-    "react/self-closing-comp": "error"
-  },
-  "settings": {
-    "react": {
-      "pragma": "h"
-    }
-  }
+    "ignorePatterns": ["dist", "docs", "www"],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 12,
+        "project": "./tsconfig.json"
+    },
+    "plugins": [
+        "@typescript-eslint",
+        "eslint-plugin-react"
+    ],
+    "rules": {
+        "@stencil/async-methods": "error",
+        "@stencil/ban-prefix": ["error", ["stencil", "stnl", "st"]],
+        "@stencil/decorators-context": "error",
+        "@stencil/decorators-style": [
+          "error", {
+            "prop": "inline",
+            "state": "inline",
+            "element": "inline",
+            "event": "inline",
+            "method": "multiline",
+            "watch": "multiline",
+            "listen": "multiline"
+          }],
+        "@stencil/element-type": "error",
+        "@stencil/host-data-deprecated": "error",
+        "@stencil/methods-must-be-public": "error",
+        "@stencil/no-unused-watch": "error",
+        "@stencil/own-methods-must-be-private": "error",
+        "@stencil/own-props-must-be-private": "error",
+        "@stencil/prefer-vdom-listener": "error",
+        "@stencil/props-must-be-public": "error",
+        "@stencil/props-must-be-readonly": "error",
+        "@stencil/render-returns-host": "error",
+        "@stencil/required-jsdoc": "error",
+        "@stencil/reserved-member-names": "error",
+        "@stencil/single-export": "error",
+        "@stencil/strict-mutable": "error",
+        "lines-between-class-members": ["error", "always"],
+        "no-multiple-empty-lines": ["error", { "max": 1 }],
+        "react/jsx-sort-props": "error",
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error",
+        "react/self-closing-comp": "error"
+    },
+    "settings": {
+        "react": {
+          "pragma": "h"
+        }
+      }
 }
