--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "copy": "ncp ./node_modules/@arcgis/core/assets ./src/assets"
+    "init:jsapi": "ncp ./node_modules/@arcgis/core/assets ./src/assets",
+    "update:jsapi": "npm update @arcgis/core && npm run init:jsapi",
+    "lint": "eslint src/**/*{.ts,.tsx}"
   },
   "devDependencies": {
     "@stencil/core": "^2.0.0",
+    "@stencil/eslint-plugin": "^0.3.1",
     "@stencil/sass": "^1.4.1",
-    "@types/jest": "^26.0.18",
-    "ncp": "^2.0.0"
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.5",
+    "ncp": "^2.0.0",
+    "typescript": "^4.1.3"
   },
   "license": "MIT",
   "dependencies": {
-    "@arcgis/core": "^4.18.0-next.20201211",
-    "@esri/calcite-components": "^1.0.0-beta.46"
+    "@arcgis/core": "^4.18.0-next.20201211"
   }
 }
